k8s/config/keycloak/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-oidc
  namespace: keycloak
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: demo-app
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: argocd
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: arcl-cmp
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: roadmap
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: mepa-app
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: qcm
  to:
    - group: ""
      kind: Service
      name: keycloakx-http
