k8s/config/keycloak/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http-route
  namespace: keycloak
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-infra
  hostnames:
    - "auth.3istor.com"
  rules:
    - backendRefs:
        - name: keycloakx-http
          port: 80
